--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,72 @@ body {
   font-family: "Red Hat Display", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* SCREEN LAYOUT */
+.layout-container {
+  margin: 16px 20px 20px 20px;
+}
+
+.layout-container__blue-circle {
+  background-image: url(../public/assets/blue-circle.png);
+  width: 92px;
+  height: 92px;
+  background-size: contain;
+  position: absolute;
+  top: -35px;
+  left: -35px;
+}
+
+.layout-container__mobile-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* FOOTER */
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  position: relative;
+}
+
+.footer-container__top {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.footer-container__top-text {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 12px;
+  letter-spacing: 0.05em;
+}
+
+.footer-container__author {
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 7px;
+  line-height: 9px;
+  letter-spacing: 0.05em;
+}
+
+.footer-container__blue-circle {
+  background-image: url(../public/assets/blue-circle.png);
+  width: 92px;
+  height: 92px;
+  background-size: contain;
+  position: absolute;
+  right: -25px;
+  bottom: -50px;
 }
