--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,8 @@ code {
     monospace;
 }
 
+/* _____________________________________________________________________________ */
 /* SCREEN LAYOUT */
-.layout-container {
-  margin: 16px 20px 20px 20px;
-}
-
 .layout-container__blue-circle {
   background-image: url(../public/assets/blue-circle.png);
   width: 92px;
@@ -37,6 +34,98 @@ code {
   align-items: center;
 }
 
+/* _____________________________________________________________________________ */
+/* HEADER */
+.header-container {
+  margin: 174px 0 70px 0;
+}
+
+.header-container__title {
+  text-transform: capitalize;
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 44px;
+  margin-bottom: 15px;
+}
+
+.header-container__box-paragraph {
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 31px;
+  letter-spacing: -0.01em;
+}
+
+/* _____________________________________________________________________________ */
+/* PROJECTS */
+.singleMobileProject_img {
+  height: 368px;
+  margin-bottom: 20px;
+}
+
+.singleMobileProject_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 70px;
+}
+
+.singleMobileProject_details {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border: 1px solid #fdeed2;
+  border-radius: 20px;
+  padding: 14px;
+}
+
+.singleMobileProject_details-light {
+  border: 1px solid #211d16;
+}
+
+.singleMobileProject_description-title {
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 31px;
+  text-transform: capitalize;
+  text-align: right;
+  margin-bottom: 20px;
+}
+
+.singleMobileProject_description-list {
+  margin-bottom: 10px;
+}
+
+.singleMobileProject_description-list li {
+  list-style: none;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 19px;
+  text-align: right;
+}
+
+.singleMobileProject_icon-container {
+  display: flex;
+  gap: 17px;
+  justify-content: center;
+}
+
+.singleMobileProject_icon-container_single-icon {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.singleMobileProject_icon-container_single-icon a {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 16px;
+  text-decoration: none;
+  color: inherit;
+}
+/* _____________________________________________________________________________ */
 /* FOOTER */
 .footer-container {
   display: flex;
