--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   position: relative;
   overflow-x: hidden;
   overflow-y: clip;
-  padding: 20px;
+  padding: 20px 20px 10px 20px;
 }
 
 code {
@@ -214,6 +214,56 @@ contact-container__icons_single-icon-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.contact-container__icons_single-icon-container > span {
+  display: none;
+}
+
+.visible {
+  display: inline;
+}
+
+/* _____________________________________________________________________________ */
+/* SKILLS */
+.skills__header {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 25px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+
+.skills__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+
+.skills__container-single-skill > img {
+  width: 20px;
+}
+
+.skills__container-single-skill > img:hover {
+  /* box-shadow: 2px 2px 0px #fe4e15; */
+  box-shadow: 0px 3px 0px rgba(254, 78, 21, 0.5);
+}
+
+.skills__container-single-skill {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.skills__container-single-skill > span {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 7px;
+  line-height: 9px;
+  letter-spacing: 0.05em;
 }
 
 /* _____________________________________________________________________________ */
