--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@ body {
 
 #root {
   position: relative;
-  overflow-x: hidden;
-  overflow-y: clip;
+  /* overflow-x: hidden; */
+  /* overflow-y: clip; */
   padding: 20px 20px 10px 20px;
 }
 
@@ -220,9 +220,13 @@ contact-container__icons_single-icon-container {
   display: none;
 }
 
-.visible {
+.contact-container__icons_single-icon-container:hover > span {
   display: inline;
 }
+
+/* .visible {
+  display: inline;
+} */
 
 /* _____________________________________________________________________________ */
 /* SKILLS */
@@ -244,11 +248,13 @@ contact-container__icons_single-icon-container {
 
 .skills__container-single-skill > img {
   width: 20px;
+  cursor: pointer;
 }
 
 .skills__container-single-skill > img:hover {
   /* box-shadow: 2px 2px 0px #fe4e15; */
-  box-shadow: 0px 3px 0px rgba(254, 78, 21, 0.5);
+  /* box-shadow: 0px 3px 0px rgba(254, 78, 21, 0.5); */
+  filter: drop-shadow(2px 2px 0px #fe4e15);
 }
 
 .skills__container-single-skill {
