--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
   --accent-color-yellow: #fec600;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   margin: 0 !important;
   font-family: "Red Hat Display", sans-serif;
@@ -15,6 +20,7 @@ body {
   position: relative;
   /* overflow-x: hidden; */
   /* overflow-y: clip; */
+  overflow: hidden;
   padding: 20px 20px 10px 20px;
 }
 
@@ -222,11 +228,21 @@ contact-container__icons_single-icon-container {
 
 .contact-container__icons_single-icon-container:hover > span {
   display: inline;
+  font-weight: 500;
+  font-size: 7px;
+  line-height: 9px;
+  letter-spacing: 0.05em;
+  position: absolute;
+  bottom: -10px;
+  width: max-content;
 }
 
-/* .visible {
-  display: inline;
-} */
+.contact-container__icons_single-icon-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
 
 /* _____________________________________________________________________________ */
 /* SKILLS */
@@ -249,11 +265,10 @@ contact-container__icons_single-icon-container {
 .skills__container-single-skill > img {
   width: 20px;
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 .skills__container-single-skill > img:hover {
-  /* box-shadow: 2px 2px 0px #fe4e15; */
-  /* box-shadow: 0px 3px 0px rgba(254, 78, 21, 0.5); */
   filter: drop-shadow(2px 2px 0px #fe4e15);
 }
 
@@ -262,14 +277,23 @@ contact-container__icons_single-icon-container {
   flex-direction: column;
   gap: 10px;
   align-items: center;
+  position: relative;
 }
 
 .skills__container-single-skill > span {
+  display: none;
   text-transform: uppercase;
   font-weight: 500;
   font-size: 7px;
   line-height: 9px;
   letter-spacing: 0.05em;
+  position: absolute;
+  bottom: -17px;
+  width: max-content;
+}
+
+.skills__container-single-skill:hover > span {
+  display: inline;
 }
 
 /* _____________________________________________________________________________ */
@@ -286,6 +310,7 @@ contact-container__icons_single-icon-container {
   display: flex;
   align-items: center;
   gap: 10px;
+  cursor: pointer;
 }
 
 .footer-container__top-text {
@@ -318,4 +343,14 @@ contact-container__icons_single-icon-container {
 /* OVERRIDES */
 .MuiPaper-root {
   box-shadow: none !important;
+}
+
+/* _____________________________________________________________________________ */
+/* DESKTOP STYLES */
+@media all and (min-width: 768px) {
+  #root {
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+  }
 }
