--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,7 @@ body {
 
 #root {
   position: relative;
-  /* overflow-x: hidden; */
-  /* overflow-y: clip; */
-  overflow: hidden;
+  overflow: clip;
   padding: 20px 20px 10px 20px;
 }
 
